--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <svg id="map" width="960" height="600"></svg>
     <div id="tooltip" class="tooltip" style="opacity: 0;"></div>
     <div id="legend"></div>
-    <script src="script.js"></script>
+    <!--<script src="script.js"></script>-->
     <script src="https://d3js.org/d3.v6.min.js"></script>
     </body>
 </html>
