--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <div id="legend"></div>
     <div id="tooltip" class="tooltip" style="opacity: 0;"></div>
     <script src="https://d3js.org/d3.v6.min.js"></script>
-    <script src="script.js"></script>
+    <!--<script src="script.js"></script>-->
 </body>
 </html>
